wellesleynet/roles/k8s/files/tautulli.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  serviceName: "tautulli"
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - image: linuxserver/tautulli:v2.14.6-ls160
        imagePullPolicy: Always
        name: tautulli
        ports:
        - containerPort: 8181
        volumeMounts:
        - name: tautulli
          mountPath: /config
        livenessProbe:
          exec:
            command:
            - ls
            - /config/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: tautulli
        persistentVolumeClaim:
          claimName: tautulli
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: tautulli
spec:
  selector:
    app: tautulli
  ports:
  - name: tautulli
    port: 8181
    protocol: TCP
    targetPort: 8181
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tautulli.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tautulli
            port:
              number: 8181
  tls:
  - hosts:
    - tautulli.kiski.co
    secretName: tautulli-kiski-co-tls
